@@ -2,22 +2,22 @@
 Hash: SHA256
 
 DIST unicorn-1.0.2_rc4.tar.gz 3730676 BLAKE2B 8761de49cb8cca6fe2cd54e22bc80e91aba8fc6aca1b111b3115b9afe3b5a77f1fa8fbf0015f28b10928f5aad76e1fda72d97748eb0f573c8a6c0e6c558d1899 SHA512 a57c2559176f0694d95bca374b66d381f6a15b470294a5a4db7d7f6135ee0a3a82f57c4f4ff7afdeb07a6f66953f5c2102a5922cdbdf6785fed41d0b6830e0b6
-EBUILD unicorn-1.0.2_rc4.ebuild 2063 BLAKE2B 3902bf18a734ed38464449a12cf32cdb4af997fa5fa8c263d08486c4ff9ea677a7359a0b8c6988acada5dba1efcf6243f719addc6f6d529b9809fbba66d04015 SHA512 0edfdfd8e8c0f033f2ee8efc4caa5b8fea1affa3a6ae2055e70a1df1373c617d22cbb1f6efd6a6c29def0a1fac1754bd67bd74e0fc10e5e49a8194504125356c
-MISC ChangeLog 134 BLAKE2B f18726fddc6a0ae8cee08bd847ebc4efedab39227bb48a4df5102279fa4125cc4d70d641a8345068b236659a572d6cd319bd4dcb3e782d12bdcf77415a685f3a SHA512 e8e767faf3edacf058de48dadddf2c19225a977c3a0387a2b79f50d23fec05569cd783817826b1f35ae0c675eda459fde8d78ccc759bc862afdf00e4fe7a8a69
+EBUILD unicorn-1.0.2_rc4.ebuild 2059 BLAKE2B 29e6b531de551019ad5fc9b84e066c6df293b391982e5ad8d11078c2d99cf77d94239a66e2a472e68717a1ca55606a6d952508a82710d28046134cd885548fa8 SHA512 694822a67501aef452d24dec6b909f00ab6e406ca724fecc40df4390621837d04f1907b2a15feb6daca61fd8b5a9dff22b990d19e139f6a1793b86b1eb06c4b9
+MISC ChangeLog 248 BLAKE2B f3fe367b1931cddee74c63c95ce8abd2509ed13bd667cd6fa69f1b3fb751df98e9f52ceedf29d57727ee49c7a202524dc8cfc260c352f660ef7a8ce62f651ed3 SHA512 4bd7a063d1d913deb949cf025a982bfb110629cde8b9c22b415f193be21b94b99d663097c047e8c39b80ea983257f5ed3a172812a72b9ab80220696b7a57ea76
 MISC metadata.xml 698 BLAKE2B 72d3ae67be8574ddf3adf579b2ec3572b2135cb9475a13e50bcd6f45fe49bd722cc620b1095f1378d0aed107d7967aab8ece8e9465e70ffce0ff95e17c9d5538 SHA512 64820d416311e0d6d9cc1445e996a96c8c55a24cad5c01f4e981658490726e9bb2c885447b1945e4721e4be5727fe492c09caf7fe2a30397aac21c37787bec5c
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl7xQJUACgkQ9L3S7+j/
-ePk6tw/+KJTsAOjuiPj3WRDa7FxUNvfGuAz3TYd6rEoktnYL9ZVj3i0ABeTceimM
-WNDoupONOBON1qebdG0culoudD6IqVyzml5FM54k5l+FMpDkk1yBmuMqRfpSqrOx
-94ROdYuZ6s6bHvQfWvCODM/5ehC5X2gaCgWN6SqmOo4SlhJRhUjqwuZPP4NrdouV
-I8ncrXQwbyEHZFiNyk0CIzf8zfZY8KvOjd7T0lmexo3RXBUN/y0x+ISfh9vfmr74
-cV0PPFEgg9Ganljb4d26heX6ZoODAD7SMIuzNrBbPSqLQgsYt85AqlksYiQDPJKe
-4W0WPmoG8yE5kbHElsq4DZjlS4DeN6YGwa1AmvaGMASwU3/0dO4aPWGlO8eyRHXh
-iOEEEIzOehWce9XdD24PJ7xdPsfGtfRMOoTJcUzMfrxRP5G6IiNNF+uhjyYlcJT/
-e7WJpXkF2BXWPjQz3J4oOwktzs739Kny4MEV5cIZjt3k8aRmrIReBXjnm0RJV+03
-KKOxGiKSHpJuTYoCooa+6h1RaxTkLgjJuNtAr8NRvJuJC2XwvrqBUa//fSJ3w7oV
-44J07IHZM+b634tdmKgbBfkNQr+zqs8eJBQw3ko85jGegKCwHMj+wbBFn1QWGz7l
-PSlRJo3XfbTVRy2CdocNuyrRXBSHL78s/+zxlNZaP1wzVbNveY4=
-=bIrb
+iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl7xRAgACgkQ9L3S7+j/
+ePnAgw/9GBUUFnYADnyNAq9n1c5AOHR6d/rbtWUGrfeEJDDIyl2JzYnkDtINVFwR
+WUU48nCqMtiO/GdtEkPVWMb0UeSlr/dM7xA/UwbfYOmNZRy3x4/caY9rfKxokZUh
+3EGT0gewqbM0ciLZRtWCLqN3Cn0rc+bEY5hvINXbFrMnQxOgtXEkgJclX/nHW1md
+4V9Kmo1cwkTggVYRS726PqtyR0GGroLSbdOEn2yQEJ5L1fz8X4ZLWpLj0BTd8Cxu
+lZii//EmFKNH2JiJxuLHiNrmZc7miE4F7zZS8yPTUbh07HXHufCoKRWPgwlKzFbU
+9KMnkNGoU19e46PcXaI8dUSz08S5yL98rClLHT7mjTRr7FKP0hLantn9rU/KH4bF
+GyQMfEMouCHakcKM1oBE7uGKRTBOOVybMYSYQjkQygYMkPJPMPdj3wRAKJQh0evg
+sWD6fflqG2OfMf3TDSgvXQtYwAbtjW2VDyFYMAotQQFKvzTBMohhRf+4hT7O9lbw
+P44TUS4wBltovPBKF5vvKW03iTgL9+XLam1FgWQgJ0s2eIGYrMxsZC/mz9rBuGsC
+6ZPGE9G/IT/Us5ZuhnRqd66EzoOhAjURX18Xx1EVBCj1iIJhkz71QOvsB2nLSbVQ
+GpTHz/UVBr7uLSOSZH8RrL32fZMEe4uXYpG8e3sc/Rcw2PLFUm4=
+=EbXa
 -----END PGP SIGNATURE-----
