@@ -1,3 +1,6 @@
+  22 Jun 2020;  <klondike@gentoo.org> unicorn-1.0.2_rc4.ebuild:
+  dev-util/unicorn: Fix a compilation bug on rc4
+
 *unicorn-1.0.2_rc4 (22 Jun 2020)
 
   22 Jun 2020;  <klondike@gentoo.org> +metadata.xml, +unicorn-1.0.2_rc4.ebuild:
